# Vision2D_navigation

./: .gitignore  .gitmodules  README.md
Codigos_ESPNOW/tfg_espow/: platformio.ini
Codigos_ESPNOW/tfg_espow/include/: configuration.h
Codigos_ESPNOW/tfg_espow/src/: main_cam32.cpp  main_cam32_wifi.cpp  main_host32.cpp
Codigos_PC/: CMakeLists.txt  README.md  run.bat
Codigos_PC/include/: aux.hpp  detect_libtorch.hpp  helper.hpp  main.hpp  profiler.hpp  serialib.h  yolov11.hpp
Codigos_PC/libs/libtensorflow-cpu-windows-x86_64/: THIRD_PARTY_TF_C_LICENSES
Codigos_PC/models/: object_sizes.txt
Codigos_PC/models/yolo/: object_sizes.txt
Codigos_PC/old/: main_fullcpp.cpp  main_onnx_rt.cpp
Codigos_PC/profiling/: both_cpu.json  both_gpu.json  mgpu_ycpu.json  ygpu_mcpu.json
Codigos_PC/python/: clean_onnx_yolo.py  depth_pro_test.py  depth_test.py  diagnostic.py  export_depth_any.py  get_frames.py  main_wifi_midas_py.py
Codigos_PC/src/: aux.cpp  detect_libtorch.cpp  globals.cpp  helper.cpp  main.cpp  main_fullcpp.cpp  main_fullcpp_mt.cpp  main_get_camera_params.cpp  main_wifi.cpp  main_wifi_midas.cpp  test_libtorch_win.cpp  test_win.cpp  yolov11.cpp
memoria/: datos.tex  main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  references.bib
memoria/pages/: 02-portada.tex  05-cuerpo.tex  06-anexos.tex
